/* ******************************************************************************
 * Copyright (c) 2019, 2020 BestSolution.at and others.
 * All rights reserved. This program and the accompanying materials 
 * are made available under the terms of the Eclipse Public License 2.0 
 * which is available at http://www.eclipse.org/legal/epl-2.0
 *
 * SPDX-License-Identifier: EPL-2.0
 * 
 * Contributors:
 *     Christoph Caks <ccaks@bestsolution.at> - initial API and implementation
 * ******************************************************************************/
plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'eclipse'
}

java {
	sourceCompatibility = JavaVersion.VERSION_11
	targetCompatibility = JavaVersion.VERSION_11
}


eclipse {
	project {
	
	}
}

javafx {
    version = "11.0.2"
    modules = [ 'javafx.graphics' ]
}


dependencies {
    implementation project(':org.eclipse.fx.drift')
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll(['--release', '11'])
//    options.compilerArgs.addAll(['--add-exports', 'javafx.base/com.sun.javafx.geom=ALL-UNNAMED'])
    options.fork = true
    options.forkOptions.executable = getJava11()  
}
